--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -100,6 +100,9 @@
 
     <!-- General colours -->
     <link href="{% static 'copo/css/copo/colours.css' %}" rel="stylesheet" >
+    
+    <!-- Icons -->
+    <link rel="stylesheet" href="{% static 'copo/css/copo/icons.css' %}">
 
     <script>
     {% include 'copo/copo_profile_types.html' %}
