--- a/static/copo/css/copo/style.css
+++ b/static/copo/css/copo/style.css
@@ -1081,10 +1081,28 @@ th {
   padding-left: 0px !important;
   font-size: 20px;
   font-weight: 500;
+  margin-right: 10px;
 }
 
 .page-title-custom select {
   width: 400px;
+}
+
+.page-title-text {
+  color: black;
+  font-size: 20px;
+  /* display: flex;
+  white-space: nowrap; */
+}
+
+.profile-title,
+.page-subtitle-text {
+  color: #8c8c8c;
+  font-size: 18px;
+}
+
+.page-subtitle-text {
+  padding-left: 5px;
 }
 
 .copo-components-icons {
